--- a/frontend/templates/themes_admin/category_list.html
+++ b/frontend/templates/themes_admin/category_list.html
@@ -14,9 +14,9 @@
             <div class="card">
                 <div class="card-header">
                     <div class="d-flex justify-content-between align-items-center">
-                        Category List
+                        Liste de catégories
                         <a href="{% url 'creation_categorie' %}"><button type="button" class="btn btn-list"><i
-                                    class="fa fa-plus-square-o"></i> &nbsp;Add Category</button></a>
+                                    class="fa fa-plus-square-o"></i> &nbsp;Ajout de catégorie</button></a>
                     </div>
                 </div>
                 <div class="card-body">
