--- a/frontend/templates/themes_admin/edit_category.html
+++ b/frontend/templates/themes_admin/edit_category.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="{% static 'themes_admin/css/add_category.css' %}">
     
 
-    <title>Pharmacy</title>
+    <title>PharmApp</title>
     <link rel="icon" href="{% static 'themes_admin/img/logo.png' %}" sizes="16x16 32x32" type="image/png">
 
 </head>
@@ -40,7 +40,7 @@
                 <a href="#">
                     <div class="row">
                         <i class="fas fa-laptop-medical"></i>
-                        <h3>Pharmacy</h3>
+                        <h3>PharmApp</h3>
                     </div>
                 </a>
             </div>
