--- a/frontend/templates/themes_admin/edit_profile.html
+++ b/frontend/templates/themes_admin/edit_profile.html
@@ -13,7 +13,7 @@
             <div class="card">
                 <div class="card-header">
                     <div class="d-flex justify-content-between align-items-center">
-                        Edit Profile
+                        Modifier mon profile
                     </div>
                 </div>
                 <div class="card-body">
@@ -43,7 +43,7 @@
 
                                 </div>
                                 
-                                <button type="submit" class="btn float-right btn-list">Edit</button>
+                                <button type="submit" class="btn float-right btn-list">Modifier</button>
                             </form>
 
                         </div>
