--- a/frontend/templates/themes_client/index.html
+++ b/frontend/templates/themes_client/index.html
@@ -51,7 +51,6 @@
       <div class="container">
         <div class="d-flex align-items-center justify-content-between">
           <div class="logo">
-<<<<<<< HEAD
             <div class="site-logo">
               <a href="{% url 'liste_medicaments_client' %}" class="js-logo-clone"">PharmApp</a>
             </div>
@@ -80,7 +79,6 @@
                   </ul>
                 </li>
                 <li><a href="{% url 'about' %}">A Propos De Nous</a></li>
->>>>>>> 950be837e7c3747c454ad0fa2a0a1a4a6b90ec41
                 <li><a href="{% url 'contact' %}">Contact</a></li>
               </ul>
             </nav>
@@ -110,6 +108,7 @@
               </div>
             </div>
           </div>
+          <img src="{% static 'themes_client/images/logo.png' %}" alt="logo" class="top-right-image">
         </div>
       </div>
 
