--- a/frontend/static/themes_admin/css/login.css
+++ b/frontend/static/themes_admin/css/login.css
@@ -1,197 +1,50 @@
-body{
-    background-color: #bee5eb;
-    margin-right: 70px;
+/* themes_admin/css/login.css */
+.body-page {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    background-color: #f8f9fa;
 }
 
-
-.card{
-    border: transparent;
-    height: auto;
-    background-color: white;
-    margin-top: 60px;
-    border-radius: 30px;
-    box-shadow: 1rem 1rem 1rem rgb(0 0 0 / 8%);
-    margin-bottom: 20px;
-    padding-bottom: 70px;
-
-}
-
-
-.header{
-    font-size: 40px;
-    color:#17a2b8;
-    font-weight: bold;
-    margin-top: 40px;
-}
-.login .col{
-    margin-top: 25px;
-    margin-bottom: 30px;
-}
-.login input{
-    height: 50px;
-    font-size: 15px;
-    border:none;
-    border-bottom: 2px solid #c9c9c9;
-}
-
-.login .card-body button{
-    font-size: 15px;
-    border-radius: 2px;
-    padding: 5px;
-    padding-right: 16px;
-    padding-left: 16px;
-    margin-right: 15px;
-    margin-top: 30px;
-    margin-left: 15px;
-}
-
-.form-control:focus {
-    border-bottom: 2px solid #17a2b8;
-    box-shadow: none;
-}
-.form-control{
-    border-bottom: 2px solid #17a2b8;
-    box-shadow: none;
-}
-.focus-input {
-    position: absolute;
-    display: block;
+.login {
     width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    pointer-events: none;
-    margin-left: 15px;
-}
-.focus-input::after {
-    font-size: 15px;
-    color: #999;
-    line-height: 1.2;
-    content: attr(data-placeholder);
-    display: block;
-    width: 100%;
-    position: absolute;
-    top: 16px;
-    left: 0;
-    -webkit-transition: all .4s;
-    -o-transition: all .4s;
-    -moz-transition: all .4s;
-    transition: all .4s;
-}
-.input:focus + .focus-input::after {
-    top: -15px;
-    font-size: 13px;
-    color: #17a2b8;
-}
-.has-val.input + .focus-input::after {
-    top: -15px;
-    font-size: 13px;
+    max-width: 900px; /* Agrandissez cette valeur pour rendre la zone plus large */
 }
 
-.login .btn-info:hover{
-    box-shadow: 0 2px 6px 0 rgb(40 151 167 / 50%);
+.card {
+    border-radius: 1rem;
+    padding: 20px; /* Ajoutez du padding si nécessaire */
+    min-height: 80vh; /* Ajoutez une hauteur minimale pour agrandir la zone en hauteur */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
-.btn:active:focus, .btn:focus {
-    outline: none;
-}
-.login img{
-    margin-top: 10px;
-    margin-left: 10px;
-    border:none;
+.card-body {
+    padding: 2rem;
+    flex-grow: 1; /* Permet à card-body de prendre tout l'espace disponible */
 }
 
-@media (max-width: 1200px) {
-    .login img{
-        margin-top: 20px;
-    }
-}
-
-@media (max-width: 1100px) {
-    .login img{
-        margin-top: 30px;
-    }
-}
-
-@media (max-width: 1000px) {
-    .login img{
-        margin-top: 40px;
-    }
-}
-
-@media (max-width: 992px) {
-    .login img{
-        margin-top: 45px;
-    }
-}
-.login .card-body button:hover{
-    box-shadow: 0 2px 6px 0 rgb(40 151 167 / 50%);
-}
-.form-check-label{
-    color:#17a2b8;
-    margin-top: 22px;
-    margin-left: 20px;
-}
-.form-check{
-    margin-top: 10px;
-    margin-left: 3px;
+/* Ajout de margin-top à l'image */
+.img-thumbnail {
+    max-width: 100%; /* Assurez-vous que l'image prend toute la largeur disponible */
+    height: auto; /* Conserver le ratio de l'image */
+    margin-top: 200px; /* Ajustez cette valeur selon vos besoins */
 }
 
 
-
-
-
-/* img{
-    width: 90%;
-    border-bottom-left-radius: 30px;
-    border-top-left-radius: 30px;
-    margin-left: 50px;
+.form-group {
+    margin-bottom: 1.5rem;
+    margin-top: 3.5rem;
 }
 
-
-.form-login input{
-    height: 50px;
-    font-size: 15px;
-    border:none;
-    border-bottom: 2px solid #c9c9c9;
-}
-.form-control:focus {
-    border-bottom: 2px solid #17a2b8;
-    box-shadow: none;
-}
-.form-control{
-    border-bottom: 2px solid #17a2b8;
-    box-shadow: none;
-}
-.focus-input {
-    position: absolute;
-    display: block;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    pointer-events: none;
-    margin-left: 15px;
+.btn-info {
+    background-color: #17a2b8;
+    border-color: #17a2b8;
 }
 
-.form-login{
-    margin-top: 60px;
-    margin-left: 50px;
+.btn-info:hover {
+    background-color: #138496;
+    border-color: #117a8b;
 }
-form{
-    margin-top: 20px;
-}
-.input{
-    margin-top: 30px;
-}
-.btn{
-    margin-top: 40px;
-    margin-left: 15px;
-    padding-left: 103px;
-    padding-right: 103px;
-    font-size: 15px;
-}
-
-
-
- */
