--- a/frontend/templates/themes_admin/inscription.html
+++ b/frontend/templates/themes_admin/inscription.html
@@ -1,22 +1,19 @@
 {% load static %}
 <!DOCTYPE html>
 <html>
-
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="{% static 'themes_admin/font/icon.js' %}" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="{% static 'themes_admin/css/bootstrap.min.css'%}">
     <script src="{% static 'themes_admin/js/popper.min.js'%}"></script>
     <link rel="stylesheet" href="{% static 'themes_admin/css/master.css' %}">
     <link rel="stylesheet" href="{% static 'themes_admin/css/login.css' %}">
-    <title>Pharmacy</title>
+    <title>PharmApp</title>
     <link rel="icon" href="{% static 'themes_admin/img/logo.png' %}" sizes="16x16 32x32" type="image/png">
 </head>
-
 <body>
     <!-- Start Body -->
     <div class="body-page" id="body-page">
@@ -25,41 +22,41 @@
                 <div class="card-body">
                     <div class="row">
                         <div class="col-lg-6 d-none d-xl-block d-lg-block">
-                            <img src="{% static 'themes_admin/img/login.jpg' %}" class="img-thumbnail">
-                        </div>
+                            <img src="{% static 'themes_admin/img/login.jpg' %}" class="img-thumbnail" style="margin-top: 150px;">
+                        </div>                        
                         <div class="col-lg-6">
                             <form method="post" action="{% url 'inscription' %}">
                                 {% csrf_token %}
                                 <div class="form-group">
-                                    {{ form.nomUtilisateur.label_tag }}
+                                    <label for="id_nomUtilisateur">Nom de l'utilisateur</label>
                                     {{ form.nomUtilisateur }}
                                 </div>
                                 <div class="form-group">
-                                    {{ form.prenomUtilisateur.label_tag }}
+                                    <label for="id_prenomUtilisateur">Prénom de l'utilisateur</label>
                                     {{ form.prenomUtilisateur }}
                                 </div>
                                 <div class="form-group">
-                                    {{ form.numeroUtilisateur.label_tag }}
-                                    {{ form.numeroUtilisateur }}
+                                    <label for="id_numeroUtilisateur">Numéro de l'utilisateur</label>
+                                    <input type="text" id="id_numeroUtilisateur" name="numeroUtilisateur" class="form-control">
                                 </div>
                                 <div class="form-group">
-                                    {{ form.adresseUtilisateur.label_tag }}
+                                    <label for="id_adresseUtilisateur">Adresse de l'utilisateur</label>
                                     {{ form.adresseUtilisateur }}
                                 </div>
                                 <div class="form-group">
-                                    {{ form.emailUtilisateur.label_tag }}
+                                    <label for="id_emailUtilisateur">Adresse Email</label>
                                     {{ form.emailUtilisateur }}
                                 </div>
                                 <div class="form-group">
-                                    {{ form.motDePasse.label_tag }}
+                                    <label for="id_motDePasse">Mot de Passe</label>
                                     {{ form.motDePasse }}
                                 </div>
                                 <div class="form-group">
-                                    {{ form.role.label_tag }}
+                                    <label for="id_role">Rôle</label>
                                     {{ form.role }}
                                 </div>
                                 <button type="submit" class="btn btn-info">S'inscrire</button>
-                                <p>Vous avez déjà un compte ? <a href="{% url 'page_connexion' %}" >Connecter vous ici</a></p>
+                                <p class="text-center">Vous avez déjà un compte ? <a href="{% url 'page_connexion' %}">Connectez-vous ici</a></p>
                             </form>
                         </div>
                     </div>
@@ -68,21 +65,6 @@
         </div>
     </div>
     <!-- End Body -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-        crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-        crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
-    <script src="https://cdn.datatables.net/1.10.24/js/jquery.dataTables.min.js"></script>
-    <script src="https://cdn.datatables.net/1.10.24/js/dataTables.bootstrap4.min.js"></script>
-    <script src="https://cdn.datatables.net/responsive/2.2.7/js/dataTables.responsive.min.js"></script>
-    <script src="https://cdn.datatables.net/responsive/2.2.7/js/responsive.bootstrap4.min.js"></script>
-    <script src="{% static 'themes_admin/js/login.js' %}"></script>
-</body>
-
-</html>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi
